--- a/bower.json
+++ b/bower.json
@@ -21,6 +21,9 @@
     "web": "https://github.com/showdownjs/github-extension"
   },
   "main": ["dist/showdown-github.js"],
+  "dependencies": {
+    "showdown": "^0.3.4"
+  },
   "ignore": [
     "src/",
     "test/",
